Fix path to terraform tflint action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,6 @@ jobs:
       - uses: actions/checkout@v2
       - id: tflint
         name: Reusable action
-        uses: ./.github/actions/tflint
+        uses: ./.github/actions/terraform/tflint
       - run: 'echo "Results path: ${{ steps.tflint.outputs.results-path }}"'
         shell: bash
